// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Style Guide/Components/Button Primary 1`] = `
<div
  className="css-1sdvidi"
>
  <button
    className="chakra-button css-1uzvtmo"
    type="button"
  >
    BUTTON
  </button>
  <button
    className="chakra-button css-1uzvtmo"
    onClick={[Function]}
    type="button"
  >
    Lights
     off
  </button>
</div>
`;

exports[`Storyshots Style Guide/Components/Button Primary Themed 1`] = `
<div
  className="css-1sdvidi"
>
  <button
    className="chakra-button css-sc18b7"
    type="button"
  >
    BUTTON
  </button>
  <button
    className="chakra-button css-1uzvtmo"
    onClick={[Function]}
    type="button"
  >
    Lights
     off
  </button>
</div>
`;

exports[`Storyshots Style Guide/Components/Button Secondary 1`] = `
<div
  className="css-1sdvidi"
>
  <button
    className="chakra-button css-1qbsjzl"
    type="button"
  >
    BUTTON
  </button>
  <button
    className="chakra-button css-1uzvtmo"
    onClick={[Function]}
    type="button"
  >
    Lights
     off
  </button>
</div>
`;

exports[`Storyshots Style Guide/Components/Button Secondary Themed 1`] = `
<div
  className="css-1sdvidi"
>
  <button
    className="chakra-button css-1qjr1s4"
    type="button"
  >
    BUTTON
  </button>
  <button
    className="chakra-button css-1uzvtmo"
    onClick={[Function]}
    type="button"
  >
    Lights
     off
  </button>
</div>
`;
